# argument-parser

./: .clang-format  .gitignore  CMakeLists.txt  DOCS.MD  LICENSE  README.md  TODO.md  compile_commands.json
.cache/clangd/index/: main.cpp.A8BD3C045BDF1C93.idx
cmake/: argument_parserConfig.cmake.in
examples/test/: CMakeLists.txt  compile_commands.json  main.cpp
include/: argparse  argument_parser.hpp  gnu_argument_convention.hpp  linux_parser.hpp  windows_parser.hpp
include/conventions/: base_convention.hpp
include/conventions/implementations/: windows_argument_convention.hpp
include/parser/: argument_parser.hpp  fake_parser.hpp  parser_v2.hpp
include/parser/parsing_traits/: traits.hpp
include/parser/platform_headers/: linux_parser.hpp  macos_parser.hpp  windows_parser.hpp
src/: main.cpp  test.cpp
src/headers/: argparse  macros.h
src/headers/conventions/: base_convention.hpp
src/headers/conventions/implementations/: gnu_argument_convention.hpp  windows_argument_convention.hpp
src/headers/parser/: argument_builder.hpp  argument_parser.hpp  exceptions.hpp  fake_parser.hpp  parser_v2.hpp
src/headers/parser/parsing_traits/: traits.hpp
src/headers/parser/platform_headers/: linux_parser.hpp  macos_parser.hpp  windows_parser.hpp
src/source/conventions/: base_convention.cpp
src/source/conventions/implementations/: gnu_argument_convention.cpp  windows_argument_convention.cpp
src/source/parser/: argument_parser.cpp  fake_parser.cpp
src/source/parser/parsing_traits/: traits.cpp
src/source/parser/platform_parsers/: linux_parser.cpp  macos_parser.cpp  windows_parser.cpp
